--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
@@ -137,8 +137,8 @@
             <div class="row cl">
                 <label class="form-label col-xs-4 col-sm-2">房源所属人：</label>
                 <div class="formControls col-xs-8 col-sm-9">
-                    <input type="text" name="" id="" placeer="" value="" class="input-text" style="width:90%">hold
-                    kg
+                    <input type="text" name="" id="" placeer="" value="" class="input-text" style="width:90%">
+                    
                 </div>
             </div>
             <div class="row cl">
