--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
@@ -97,6 +97,19 @@
             <div class="row cl">
                 <label class="form-label col-xs-4 col-sm-2">地址：</label>
                 <div class="formControls col-xs-8 col-sm-9">
+                    <select id="sRgion">
+                        <option value="0">请选择</option>
+
+                    </select>
+                    <select id="sStreet">
+                        <option value="0">请选择</option>
+
+                    </select>
+                </div>
+            </div>
+            <div class="row cl">
+                <label class="form-label col-xs-4 col-sm-2">详细地址：</label>
+                <div class="formControls col-xs-8 col-sm-9">
                     <input type="text" name="" id="" placeholder="" value="" class="input-text">
                 </div>
             </div>
@@ -144,7 +157,7 @@
             <div class="row cl">
                 <label class="form-label col-xs-4 col-sm-2">房源所属人电话：</label>
                 <div class="formControls col-xs-8 col-sm-9">
-                    <input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">                   
+                    <input type="text" name="" id="" placeholder="" value="" class="input-text" style="width:90%">
                 </div>
             </div>
             <div class="row cl">
@@ -206,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-            </div>          
+            </div>
             <div class="row cl">
                 <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
                     <button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存并提交审核</button>
@@ -233,6 +246,34 @@
     <script type="text/javascript" src="lib/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
     <script type="text/javascript">
         $(function () {
+            //区
+            $.ajax({
+                url: "https://apis.map.qq.com/ws/district/v1/getchildren?id=110000&key=HYPBZ-PNF3J-GRYFR-K4XZ2-3YXLV-67B5R&output=jsonp",
+                jsonp: "callback",
+                dataType:"jsonp",
+                type: "get",
+                success: function (data) {
+                    $(data.result[0]).each(function (index, data) {
+                        $("#sRgion").append("<option value='" + data.id + "'>" + data.fullname + "</option>");
+                    })                    
+                }
+            })
+            //街道
+            $("#sRgion").change(function () {
+                $("#sStreet").children().remove();
+                $.ajax({
+                    url: "https://apis.map.qq.com/ws/district/v1/getchildren?id=" + $("#sRgion").val() + "&key=HYPBZ-PNF3J-GRYFR-K4XZ2-3YXLV-67B5R&output=jsonp",
+                    jsonp: "callback",
+                    dataType: "jsonp", 
+                    type: "get",
+                    success: function (data) {
+                        $(data.result[0]).each(function (index, data) {
+                            $("#sStreet").append("<option value='" + data.id + "'>" + data.fullname + "</option>");
+                        })
+                    }
+                })
+            })
+
             $('.skin-minimal input').iCheck({
                 checkboxClass: 'icheckbox-blue',
                 radioClass: 'iradio-blue',
@@ -249,7 +290,7 @@
                 swf: 'lib/webuploader/0.1.5/Uploader.swf',
 
                 // 文件接收服务端。
-                server: 'lib/webuploader/0.1.5/server/fileupload.php',
+                server: '../Controllers/HouseController/0.1.5/server/fileupload.php',
 
                 // 选择文件的按钮。可选。
                 // 内部根据当前运行是创建，可能是input元素，也可能是flash.
@@ -915,7 +956,6 @@
         })(jQuery);
 
         $(function () {
-            var ue = UE.getEditor('editor');
         });
     </script>
 </body>
