--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-add.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-add.html
@@ -80,13 +80,13 @@
 			</select>
 			</span> </div>
 	</div>
-	<!--<div class="row cl">
+	<div class="row cl">
 		<label class="form-label col-xs-4 col-sm-3">备注：</label>
 		<div class="formControls col-xs-8 col-sm-9">
 			<textarea name="Admin_remark" class="textarea"  placeholder="说点什么...100个字符以内" dragonfly="true" onKeyUp="$.Huitextarealength(this,100)"></textarea>
 			<p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
 		</div>
-	</div>-->
+	</div>
 	<div class="row cl">
 		<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
 			<input class="btn btn-primary radius" type="button" onclick="add()" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
@@ -186,12 +186,5 @@ $(function(){
                 }
             }
         })
-    }
-
-    
-
-   
-
-       
-  
+    } 
 </script>
