--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
@@ -31,13 +31,12 @@
                 </span><button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);"><i class="Hui-iconfont">&#xe600;</i> 添加</button>
             </form>
         </div>
-        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a></span> <span class="r" id="s1">共有数据：<strong></strong> </span> </div>
         <div class="mt-20">
-            <table class="table table-border table-bordered table-bg table-sort">
+            <table id="tab" class="table table-border table-bordered table-bg table-sort">
                 <thead>
                     <tr class="text-c">
-                        <th><input type="checkbox" name="" value=""></th>
-                        <th>ID</th>
+                        <th><input type="checkbox" name="" value=""></th>    
                         <th>排序</th>
                         <th>图片</th>
                         <th>区</th>
@@ -46,18 +45,17 @@
                         <th>操作</th>
                     </tr>
                 </thead>
-                <tbody>
+                <!--<tbody>
                     <tr class="text-c">
                         <td><input name="" type="checkbox" value=""></td>
-                        <td>1</td>
                         <td>1</td>
                         <td><img src="temp/brand/dongpeng.jpeg"></td>
                         <td class="text-l"><img title="国内品牌" src="static/h-ui.admin/images/cn.gif"> 东鹏</td>
                         <td class="text-l">东鹏陶瓷被评为“中国名牌”、“国家免检产品”、“中国驰名商标”、http://www.dongpeng.net/</td>
-                        <td>是</td>
-                        <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+                        <td class="td-status"> <span class="label radius">已启用</span></td>
+                        <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="admin_stop(this," 10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>                       
                     </tr>
-                </tbody>
+                </tbody>-->
             </table>
         </div>
     </div>
@@ -71,14 +69,59 @@
     <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
     <script type="text/javascript">
-        $('.table-sort').dataTable({
-            "aaSorting": [[1, "desc"]],//默认第几个排序
-            "bStateSave": true,//状态保存
-            "aoColumnDefs": [
-                //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-                { "orderable": false, "aTargets": [0, 6] }// 制定列不参与排序
-            ]
-        });
+        //$('.table-sort').dataTable({
+        //    "aaSorting": [[1, "desc"]],//默认第几个排序
+        //    "bStateSave": true,//状态保存
+        //    "aoColumnDefs": [
+        //        //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+        //        { "orderable": false, "aTargets": [0, 6] }// 制定列不参与排序
+        //    ]
+        //});
+
+        $(function () {
+            //获取房源信息
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/GetHouses",
+                success: function (data) {                 
+                    $(data).each(function (index, data) {
+                        var tr = '<tbody>'
+                            + '<tr class="text-c">'
+                            + '<td><input name="" type="checkbox" value=""></td>'                         
+                            + '<td>' + (index + 1) + '</td>'
+                            + ' <td><img src="' + data.House_ImgUrl + '" width="70" height="60"></td>'
+                            + ' <td class="text-l">' + data.Region_ID + '</td>'
+                            + '<td>' + data.House_Address + '</td>'
+                            + '<td class="td-status" > <span class="label radius">已启用</span></td >'
+                            + ' <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="admin_stop(this," 10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>&nbsp;&nbsp;<a style="text-decoration:none" onClick="" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="del_House(this,' + data.House_ID+')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
+                            + ' </tr></tbody >';
+                        $("#tab").append(tr);
+                        
+                    })
+                    $("#s1").append("<strong>" +data.length + "条</strong>");
+                }
+            })
+
+        })
+
+        function del_House(obj, id) {
+            layer.confirm('确认要删除吗？', function (index) {
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8092/Dwelling/DeleteHouse?houseId='+id,
+                    dataType: 'json',
+                    success: function (data) {
+                        $(obj).parents("tr").remove();
+                        layer.msg('已删除!', { icon: 1, time: 1000 });
+                    },
+                    error: function (data) {
+                        console.log(data.msg);
+                    },
+                });
+            });
+        }
+
+
+  
     </script>
 </body>
 </html>
