--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-add.html
@@ -346,6 +346,7 @@
                     type: "post",
                     data: $("#form-article-add").serialize(),
                     success: function (data) {
+                        alert(0);
                         if (data > 0) {
                             alert("保存成功!!!");
                         }
