--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
@@ -69,14 +69,7 @@
     <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
     <script type="text/javascript">
-        //$('.table-sort').dataTable({
-        //    "aaSorting": [[1, "desc"]],//默认第几个排序
-        //    "bStateSave": true,//状态保存
-        //    "aoColumnDefs": [
-        //        //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-        //        { "orderable": false, "aTargets": [0, 6] }// 制定列不参与排序
-        //    ]
-        //});
+    
 
         $(function () {
             //获取房源信息
@@ -120,6 +113,22 @@
             });
         }
 
+        ////批量删除
+        //function delAllProduct() {
+        //    if (!confirm("确定要删除选中的吗？")) {
+        //        return;
+        //    }
+        //    var cks = document.getElementsByName("check");
+        //    var str = "";
+        //    //拼接所有的图书id
+        //    for (var i = 0; i < cks.length; i++) {
+        //        if (cks[i].checked) {
+        //            str += "House_ID=" + cks[i].value + "&";
+        //        }
+        //    }
+        //    //去掉字符串末尾的‘&'
+        //    str = str.substring(0, str.length - 1);           
+        //}
 
   
     </script>
