--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
@@ -24,23 +24,22 @@
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 角色管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-	<div class="cl pd-5 bg-1 bk-gray"> <span class="l"> <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" href="javascript:;" onclick="add()"><i class="Hui-iconfont">&#xe600;</i> 添加角色</a> </span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
-	<table class="table table-border table-bordered table-hover table-bg" id="tab1">
-		<thead>
-			<tr>
-				<th scope="col" colspan="6">角色管理</th>
-			</tr>
-			<tr class="text-c">
-				<th width="25"><input type="checkbox" value="" name=""></th>
-				<th width="40">ID</th>
-				<th width="200">角色名</th>
-				<th>用户列表</th>
-				<th width="300">描述</th>
-				<th width="70">操作</th>
-			</tr>
-		</thead>
-
-	</table>
+	<div class="cl pd-5 bg-1 bk-gray"> <span class="l"> <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" href="AddRole.html" onclick=""><i class="Hui-iconfont">&#xe600;</i> 添加角色</a> </span> <span class="r" id="sum">共有数据：<strong id="sum"></strong> </span> </div>
+    <table class="table table-border table-bordered table-hover table-bg" id="tab1">
+        <thead>
+            <tr>
+                <th scope="col" colspan="6">角色管理</th>
+            </tr>
+            <tr class="text-c">
+                <th width="25"><input type="checkbox" value="" name=""></th>
+                <th width="40">ID</th>
+                <th width="200">角色名</th>
+                <th>用户列表</th>
+                <th width="300">权限</th>
+                <th width="70">操作</th>
+            </tr>
+        </thead>        
+    </table>
 </div>
 <!--_footer 作为公共模版分离出去-->
 <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script> 
@@ -51,6 +50,8 @@
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript">
+
+
 /*管理员-角色-添加*/
 function admin_role_add(title,url,w,h){
 	layer_show(title,url,w,h);
@@ -59,23 +60,7 @@ function admin_role_add(title,url,w,h){
 function admin_role_edit(title,url,id,w,h){
 	layer_show(title,url,w,h);
 }
-/*管理员-角色-删除*/
-function admin_role_del(obj,id){
-	layer.confirm('角色删除须谨慎，确认要删除吗？',function(index){
-		$.ajax({
-			type: 'POST',
-			url: '',
-			dataType: 'json',
-			success: function(data){
-				$(obj).parents("tr").remove();
-				layer.msg('已删除!',{icon:1,time:1000});
-			},
-			error:function(data) {
-				console.log(data.msg);
-			},
-		});		
-	});
-}
+
 </script>
 </body>
 </html>
@@ -84,7 +69,7 @@ function admin_role_del(obj,id){
 
 
         $.ajax({
-            url: "http://localhost:8092/Dwelling/GetAdmins",
+            url: "http://localhost:8092/Dwelling/GetRoles",
             type: "get",
             success: function (data) {
 
@@ -92,23 +77,26 @@ function admin_role_del(obj,id){
                     var tr = '<tbody>'
                         + '<tr class="text-c" >'
                         + '<td><input type = "checkbox" value = "3" name = "" ></td>'
-                        + '<td>' + data.Admin_ID + '</td>'
-                        + '<td>' + data.Admin_Permission + '</td>'
-                        + '<td>' + data.Admin_Name + '</td>'
-                        + '<td>' + data.Admin_remark + '</td>'
-                        + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="del(this,' + data.Admin_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
+                        + '<td>' + (index+1) + '</td>'
+                        + '<td>' + data.role_Name + '</td>'
+                        + '<td>1</td>'
+                        + '<td>' + data.permission_Name + '</td>'
+                        + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="delRole(this,' + data.role_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                         + '</tr></tbody>';
                     $("#tab1").append(tr);
+                   
                 })
+                $("#sum").append("<strong>" + data.length + "条</strong>");
             }
+            
         })
     })
 
-    function del(obj, id) {
+    function delRole(obj, id) {
         layer.confirm('确认要删除吗？', function (index) {
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:8092/Dwelling/DeleteAdmin?adminId=' + id,
+                url: 'http://localhost:8092/Dwelling/DeleteRole?roleID=' + id,
                 dataType: 'json',
                 success: function (data) {
                     $(obj).parents("tr").remove();
