--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/product-brand.html
@@ -92,7 +92,7 @@
                             + '<tr class="text-c">'
                             + '<td><input name="" type="checkbox" value=""></td>'
                             + '<td>' + (index + 1) + '</td>'
-                            + ' <td><img src="' + data.House_ImgUrl + '" width="70" height="60"></td>'
+                            + ' <td><img src="../Content/img/' + data.House_ImgUrl + '" width="70" height="60"></td>'
                             + ' <td class="text-l">' + data.Region_ID + '</td>'
                             + '<td>' + data.House_Address + '</td>'
                             + '<td class="td-status" >' + data.House_IsEnable + '</td >'
