--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-permission.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-permission.html
@@ -40,11 +40,12 @@
                     <th width="25"><input type="checkbox" name="" value=""></th>
                     <th width="40">ID</th>
                     <th width="200">权限名称</th>
-                    <th>权限描述</th>
+                    <th>URL</th>
+                    <th width="300">权限描述</th>
                     <th width="100">操作</th>
                 </tr>
             </thead>
-            <tbody>
+            <!--<tbody>
                 <tr class="text-c">
                     <td><input type="checkbox" value="1" name=""></td>
                     <td>1</td>
@@ -52,7 +53,7 @@
                     <td></td>
                     <td><a title="编辑" href="javascript:;" onclick="admin_permission_edit('角色编辑','admin-permission-add.html','1','','310')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_permission_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
                 </tr>
-            </tbody>
+            </tbody>-->
         </table>
     </div>
     <!--_footer 作为公共模版分离出去-->
@@ -107,6 +108,7 @@
                         + '<td><input type = "checkbox" value = "3" name = "" ></td>'
                         + '<td>' + data.permission_ID + '</td>'
                         + '<td>' + data.permission_Name + '</td>'
+                        + '<td>' + data.permission_Url + '</td>'
                         + '<td>' + data.remark + '</td>'
                         + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="del(this,' + data.permission_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
                         + '</tr></tbody>';
