--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
@@ -24,7 +24,7 @@
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 角色管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
-	<div class="cl pd-5 bg-1 bk-gray"> <span class="l"> <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius" href="AddRole.html" onclick=""><i class="Hui-iconfont">&#xe600;</i> 添加角色</a> </span> <span class="r" id="sum">共有数据：<strong id="sum"></strong> </span> </div>
+	<div class="cl pd-5 bg-1 bk-gray"> <span class="l"> <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  onclick="add()"><i class="Hui-iconfont">&#xe600;</i> 添加角色</a> </span> <span class="r" id="sum">共有数据：<strong id="sum"></strong> </span> </div>
     <table class="table table-border table-bordered table-hover table-bg" id="tab1">
         <thead>
             <tr>
@@ -110,7 +110,7 @@ function admin_role_edit(title,url,id,w,h){
 
     }
     function add() {
-        location.href = "/H-ui.admin/admin-add.html";
+        location.href = "/H-ui.admin/AddRole.html";
     }
 
 </script>
