--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/Zshow.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/Zshow.html
@@ -40,13 +40,12 @@
                 </nav>
                 <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
                     <ul class="cl">
-                        <li>超级管理员</li>
+                        <li>普通管理员</li>
                         <li class="dropDown dropDown_hover">
-                            <a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
+                            <a href="#" class="dropDown_A">xinxin<i class="Hui-iconfont">&#xe6d5;</i></a>
                             <ul class="dropDown-menu menu radius box-shadow">
-                                <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
-                                <li><a href="#">切换账户</a></li>
-                                <li><a href="#" onclick="aa()">退出</a></li>
+                                <li><a href="javascript:;" onclick="fun()">退出</a></li>
+                                
                             </ul>
                         </li>
                         <li id="Hui-msg"> <a href="#" title="消息"><span class="badge badge-danger">1</span><i class="Hui-iconfont" style="font-size:18px">&#xe68a;</i></a> </li>
@@ -68,19 +67,7 @@
     </header>
     <aside class="Hui-aside">
         <div class="menu_dropdown bk_2">
-            <dl id="menu-admin">
-                <dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-                <dd>
-                    <ul>
-                        <li><a data-href="admin-list.html" data-title="管理员列表" href="javascript:void(0)">管理员列表</a></li>
-                        <li><a data-href="admin-add.html" data-title="添加管理员" href="javascript:void(0)">添加管理员</a></li>
-                        <li><a data-href="admin-role.html" data-title="角色管理" href="javascript:void(0)">角色管理</a></li>
-                        <li><a data-href="admin-permission.html" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
-                        <li><a data-href="admin-password-edit.html" data-title="管理员修改密码" href="javascript:void(0)">管理员修改密码</a></li>
-
-                    </ul>
-                </dd>
-            </dl>
+         
             <dl id="menu-product">
                 <dt><i class="Hui-iconfont">&#xe620;</i> 房源管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
@@ -90,7 +77,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl id="menu-picture">
+            <!--<dl id="menu-picture">
                 <dt><i class="Hui-iconfont">&#xe613;</i> 投诉建议管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
@@ -119,7 +106,7 @@
                         <li><a data-href="feedback-list.html" data-title="意见反馈" href="javascript:void(0)">意见反馈</a></li>
                     </ul>
                 </dd>
-            </dl>
+            </dl>-->
         </div>
     </aside>
     <div class="dislpayArrow hidden-xs"><a class="pngfix" href="javascript:void(0);" onClick="displaynavbar(this)"></a></div>
@@ -234,7 +221,7 @@
 </body>
 </html>
 <script>
-    function aa() {
-        location.href = "login.html";
+    function fun() {
+        location.href ="login.html"
     }
 </script>
