--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/AddRole.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/AddRole.html
@@ -6,15 +6,14 @@
     <script src="../Content/jquery-3.1.1.js"></script>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <script>
-       
+       //添加权限
         $(function () {
             $.ajax({
                 url: "http://localhost:8092/Dwelling/GetPermissions",
                 type: "get",
                 success: function (data) {
-
                     $(data).each(function (index, data) {                     
-                        $("#permison").append("<input id='Checkbox1' type='checkbox' class='permiss' name='cks' value='" + data.permission_Name + "' />" + data.permission_Name + "      ");
+                        $("#permission").append("<input id='Checkbox1' type='checkbox' class='permiss' name='cks' value='" + data.Permission_ID + "' />" + data.Permission_Name + "</br>");
                     })
                 }
             })
@@ -53,7 +52,7 @@
             </tr>
             <tr >
                 <td>权限名称</td>
-                <td id="permison">
+                <td id="permission">
                    
                 </td>
             </tr>
