--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-list.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-list.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
     <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
-    <script src="../Content/Img/jquery-1.10.2.js"></script>
+    <script src="../Content/jquery-3.1.1.js"></script>
     <!--[if IE 6]>
     <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
     <script>DD_belatedPNG.fix('*');</script>
@@ -40,47 +40,24 @@
                     <th scope="col" colspan="9">员工列表</th>
                 </tr>
                 <tr class="text-c">
-                    <th width="25"><input type="checkbox" name="" value=""></th>
-                    <th width="40">ID</th>
-                    <th width="150">登录名</th>
-                    <th width="90">手机</th>
-                    <th width="150">邮箱</th>
-                    <th>角色</th>
-                    <th width="100">是否已启用</th>
-                    <th width="100">操作</th>
+                    <th><input type="checkbox" name="" value=""></th>
+                    <th>ID</th>
+                    <th>登录名</th>
+                    <th>性别</th>
+                    <th>手机</th>
+                    <th>邮箱</th>
+                    <th>角色身份</th>
+                    <th>备注</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr class="text-c">
-                    <td><input type="checkbox" value="1" name=""></td>
-                    <td>1</td>
-                    <td>admin</td>
-                    <td>13000000000</td>
-                    <td>admin@mail.com</td>
-                    <td>超级管理员</td>
-
-                    <td class="td-status"><span class="label label-success radius">已启用</span></td>
-                    <td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,'10001')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a> <a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','admin-add.html','1','800','500')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-                </tr>
-                <tr class="text-c">
-                    <td><input type="checkbox" value="2" name=""></td>
-                    <td>2</td>
-                    <td>zhangsan</td>
-                    <td>13000000000</td>
-                    <td>admin@mail.com</td>
-                    <td>栏目编辑</td>
-
-                    <td class="td-status"><span class="label radius">已停用</span></td>
-                    <td class="td-manage"><a style="text-decoration:none" onClick="admin_start(this,'10001')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe615;</i></a> <a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','admin-add.html','2','800','500')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-                </tr>
             </tbody>
         </table>
     </div>
     <!--_footer 作为公共模版分离出去-->
     <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="lib/layer/2.4/layer.js"></script>
-    <script type="text/javascript" src="static/h-ui/js/H-ui.min.js"></script>
-    <script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.js"></script>
     <!--/_footer 作为公共模版分离出去-->
     <!--请在下方写此页面业务相关的脚本-->
     <script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
@@ -88,122 +65,52 @@
     <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
     <script src="../Content/jquery-3.1.1.js"></script>
     <script type="text/javascript">
+        $(function () {
+            //获得所有管理员信息
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/GetAdmins",
+                type: "get",
+                success: function (data) {
 
-
-
-
-
-
-                /*
-                    参数解释：
-                    title	标题
-                    url		请求的url
-                    id		需要操作的数据id
-                    w		弹出层宽度（缺省调默认值）
-                    h		弹出层高度（缺省调默认值）
-                */
-                /*管理员-增加*/
-                function admin_add(title, url, w, h) {
-                    layer_show(title, url, w, h);
+                    $(data).each(function (index, data) {
+                        var tr = '<tbody>'
+                            + '<tr class="text-c" >'
+                            + '<td><input type = "checkbox" value = "3" name = "" ></td>'
+                            + '<td>' + data.Admin_ID + '</td>'
+                            + '<td>' + data.Admin_Name + '</td>'
+                            + '<td>' + ((data.Admin_Gender == 0) ? "女" : "男") + '</td>'
+                            + '<td>' + data.Admin_Tel + '</td>'
+                            + '<td>' + data.Admin_Email + '</td>'
+                            + '<td>' + data.Role_Name + '</td>'
+                            + '<td>' + data.Admin_Remark + '</td>'
+                            + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="del(this,' + data.Admin_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
+                            + '</tr></tbody>';
+                        $("#tab1").append(tr);
+                    })
                 }
-                /*管理员-删除*/
-                //function admin_del(obj, id) {
-                //    layer.confirm('确认要删除吗？', function (index) {
-                //        $.ajax({
-                //            type: 'POST',
-                //            url: 'http://localhost:8092/Dwelling/DeleteAdmin?adminId=' + id,
-                //            dataType: 'json',
-                //            success: function (data) {
-                //                $(obj).parents("tr").remove();
-                //                layer.msg('已删除!', { icon: 1, time: 1000 });
-                //            },
-                //            error: function (data) {
-                //                console.log(data.msg);
-                //            },
-                //        });
-                //    });
-                //}
+            })
+        })
+        function del(obj, id) {
+            layer.confirm('确认要删除吗？', function (index) {
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8092/Dwelling/DeleteAdmin?adminId=' + id,
+                    dataType: 'json',
+                    success: function (data) {
+                        $(obj).parents("tr").remove();
+                        layer.msg('已删除!', { icon: 1, time: 1000 });
+                    },
+                    error: function (data) {
+                        console.log(data.msg);
+                    },
+                });
+            });
 
+        }
+        function add() {
+            location.href = "/H-ui.admin/admin-add.html";
+        }
 
-                /*管理员-编辑*/
-                function admin_edit(title, url, id, w, h) {
-                    layer_show(title, url, w, h);
-                }
-                /*管理员-停用*/
-                function admin_stop(obj, id) {
-                    layer.confirm('确认要停用吗？', function (index) {
-                        //此处请求后台程序，下方是成功后的前台处理……
-
-                        $(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-                        $(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-                        $(obj).remove();
-                        layer.msg('已停用!', { icon: 5, time: 1000 });
-                    });
-                }
-
-                /*管理员-启用*/
-                function admin_start(obj, id) {
-                    layer.confirm('确认要启用吗？', function (index) {
-                        //此处请求后台程序，下方是成功后的前台处理……
-
-
-                        $(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,id)" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
-                        $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-                        $(obj).remove();
-                        layer.msg('已启用!', { icon: 6, time: 1000 });
-                    });
-                }
     </script>
 </body>
 </html>
-<script>
-    $(function () {
-  
-
-        $.ajax({
-            url: "http://localhost:8092/Dwelling/GetAdmins",
-            type: "get",
-            success: function (data) {
-             
-                $(data).each(function (index, data) {
-                    var tr ='<tbody>'
-                        +'<tr class="text-c" >'
-                        + '<td><input type = "checkbox" value = "3" name = "" ></td>'
-                        + '<td>' + data.Admin_ID + '</td>'
-                        + '<td>' + data.Admin_Name + '</td>'
-                        + '<td>' + data.Admin_number + '</td>'
-                        + '<td>' + data.Admin_email + '</td>'
-                        + '<td>' + data.Admin_Permission + '</td>'
-                        + '<td class="td-status"><span class="label radius">已启用</span></td>'
-                        + '<td class="td-manage"><a style="text-decoration:none" onClick="admin_stop(this,"10001")" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a><a title="删除" href="javascript:;" onclick="del(this,' + data.Admin_ID + ')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>'
-                        + '</tr></tbody>';
-                    $("#tab1").append(tr);
-                })
-            }
-        })
-    })
-
-
-    function del(obj, id) {
-        layer.confirm('确认要删除吗？', function (index) {
-            $.ajax({
-                type: 'get',
-                url: 'http://localhost:8092/Dwelling/DeleteAdmin?adminId=' + id,
-                dataType: 'json',
-                success: function (data) {
-                    $(obj).parents("tr").remove();
-                    layer.msg('已删除!', { icon: 1, time: 1000 });
-                },
-                error: function (data) {
-                    console.log(data.msg);
-                },
-            });
-        });
-
-    }
-    function add(){
-        location.href = "/H-ui.admin/admin-add.html";
-    }
-
-
-</script>
