--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/admin-role.html
@@ -108,7 +108,7 @@ function admin_role_edit(title,url,id,w,h){
 
     }
     function add() {
-        location.href = "/H-ui.admin/AddRole.html";
+        location.href = "/H-ui.admin/admin-role-add.html";
     }
 
 </script>
