--- a/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
+++ b/Dwelling.Demo/Dwelling.UI/H-ui.admin/index.html
@@ -71,7 +71,7 @@
             <dl id="menu-admin">
                 <dt><i class="Hui-iconfont">&#xe62d;</i> 管理员管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
-                    <ul>
+                    <ul id="urlList">
                         <li><a data-href="admin-list.html" data-title="管理员列表" href="javascript:void(0)">管理员列表</a></li>
                         <li><a data-href="admin-add.html" data-title="添加管理员" href="javascript:void(0)">添加管理员</a></li>
                         <li><a data-href="admin-role.html" data-title="角色管理" href="javascript:void(0)">角色管理</a></li>
@@ -158,83 +158,25 @@
     <script type="text/javascript" src="lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
     <script type="text/javascript">
         $(function () {
-            /*$("#min_title_list li").contextMenu('Huiadminmenu', {
-                bindings: {
-                    'closethis': function(t) {
-                        console.log(t);
-                        if(t.find("i")){
-                            t.find("i").trigger("click");
-                        }
-                    },
-                    'closeall': function(t) {
-                        alert('Trigger was '+t.id+'\nAction was Email');
-                    },
+            alert(location.search.substr(4))
+            $.ajax({
+                url: "http://localhost:8092/Dwelling/GetAdminPermissionUrls",
+                type: "get",
+                data: {
+                    adminId: location.search.substr(4),
+                },
+
+                success: function (data) {
+                    $(data).each(function (index, data) {
+                        $("#urlList").append("<li><a data-href='" + data.Permission_Url + "' data-title='" + data.Permission_Name + "' href='javascript: void (0)'>" + data.Permission_Name + "</a></li>");
+                    })
+
                 }
-            });*/
-        });
-        /*个人信息*/
-        function myselfinfo() {
-            layer.open({
-                type: 1,
-                area: ['300px', '200px'],
-                fix: false, //不固定
-                maxmin: true,
-                shade: 0.4,
-                title: '查看信息',
-                content: '<div>管理员信息</div>'
-            });
-        }
-
-        /*资讯-添加*/
-        function article_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*图片-添加*/
-        function picture_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*产品-添加*/
-        function product_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*用户-添加*/
-        function member_add(title, url, w, h) {
-            layer_show(title, url, w, h);
-        }
-
-
+            })
+           
+        })
     </script>
-
-    <!--此乃百度统计代码，请自行删除-->
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?080836300300be57b7f34f4b3e97d911";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
-    <!--/此乃百度统计代码，请自行删除-->
 </body>
 </html>
 <script>
-    function aa() {
-        location.href = "login.html";
-    }
 </script>
